--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,9 +28,9 @@
                         <a class="nav-link" href="{{ path('event_new') }}">Créer un événement</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Search">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+                <form class="form-inline my-2 my-lg-0" method="get" action="{{ path('event_list') }}">
+                    <input name="query" class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Rechercher">
+                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
             </div>
         </nav>
