--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('event_new') }}">Créer un événement</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('event_random') }}">Trouver l'inspiration</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0" method="get" action="{{ path('event_list') }}">
                     <input name="query" class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Rechercher">
