--- a/templates/event/form.html.twig
+++ b/templates/event/form.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
     {{ form_start( form, {
         'attr': {
-            'class': 'container-fluid my-2'
+            'class': 'container-fluid my-2',
+            'novalidate': 'novalidate',
         }
     } ) }}
 
