--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,19 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <div class="toaster">
+             {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }} alert-dismissible fade show">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+             {% endfor %}
+        </div>
+
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="{{ path('main_home') }}">
                 <img src="{{ asset('build/images/icon.png') }}" alt="Logo de BeerTime">
@@ -33,7 +46,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0" method="get" action="{{ path('event_list') }}">
                     <input name="query" class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Rechercher">
-                    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Rechercher</button>
+                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
             </div>
         </nav>
