--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -20,6 +20,12 @@ nav.navbar{
 
     .nav-link{
         color: white!important;
+        margin: 0 5px;
+
+        &:hover, &.active{
+            background-color: white;
+            color: black!important;
+        }
     }
 }
 
