Upload event picture

--- a/templates/event/form.html.twig
+++ b/templates/event/form.html.twig
@@ -15,7 +15,7 @@
         </div>
         <div class="col-12 col-lg-6">
             {{ form_row( form.description ) }}
-            {{ form_row( form.picture ) }}
+            {{ form_row( form.pictureFile ) }}
             {{ form_row( form.price ) }}
             {{ form_row( form.capacity ) }}
         </div>
