--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,6 +49,14 @@
                     <input name="query" class="form-control mr-sm-2" type="search" placeholder="Rechercher ..." aria-label="Rechercher">
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
+                <div>
+                    {% if app.user is empty %}
+                        <a href="{{ path('user_login') }}" class="mx-2 text-decoration-none text-light">Connexion</a>
+                        <a href="{{ path('user_register') }}" class="btn btn-light">Inscription</a>
+                    {% else %}
+                        <a href="{{ path('user_logout') }}" class="btn btn-danger mx-2">Déconnexion</a>
+                    {% endif %}
+                </div>
             </div>
         </nav>
 
