--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -17,6 +17,7 @@
         <div class="col-12 col-lg-6">
             {{ form_row( form.email ) }}
             {{ form_row( form.plainPassword ) }}
+            {{ form_row( form.searchAddress ) }}
         </div>
         <div class="col-12 col-lg-6">
             {{ form_row( form.firstname ) }}
