--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -17,7 +17,10 @@
         <div class="col-12 col-lg-6">
             {{ form_row( form.email ) }}
             {{ form_row( form.plainPassword ) }}
-            {{ form_row( form.searchAddress ) }}
+            <div class="autocompleter-container">
+                {{ form_row( form.searchAddress ) }}
+                <ul id="autocompleter"></ul>
+            </div>
         </div>
         <div class="col-12 col-lg-6">
             {{ form_row( form.firstname ) }}
